src/objects/pse__Work_Calendar__c.object
<CustomObject>
    <fields>
        <fullName>pse__Thursday_Start_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Thursday Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                    <default>true</default>
                    <label>08:00 (8:00 AM)</label>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Tuesday_End_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Tuesday End Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Tuesday_Hours__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Tuesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Tuesday_Start_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Tuesday Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                    <default>true</default>
                    <label>08:00 (8:00 AM)</label>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (01:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Wednesday_End_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Wednesday End Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Wednesday_Hours__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Wednesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Wednesday_Start_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Wednesday Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                    <default>true</default>
                    <label>08:00 (8:00 AM)</label>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Week_Start_Day__c</fullName>
        <inlineHelpText>Select the day of the week your region&apos;s calendar starts on.</inlineHelpText>
        <label>Week Start Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                    <default>true</default>
                    <label>Sunday</label>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Week_Total_Hours__c</fullName>
        <formula>pse__Monday_Hours__c + pse__Tuesday_Hours__c + pse__Wednesday_Hours__c + pse__Thursday_Hours__c + pse__Friday_Hours__c + pse__Saturday_Hours__c + pse__Sunday_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__WeekendsAreWorkdays__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If true, task start and end dates can extend into non-working time.</inlineHelpText>
        <label>Allow Start/End on Non-working Days</label>
        <type>Checkbox</type>
    </fields>
    <label>Work Calendar</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Sunday_Hours__c</columns>
        <columns>pse__Monday_Hours__c</columns>
        <columns>pse__Tuesday_Hours__c</columns>
        <columns>pse__Wednesday_Hours__c</columns>
        <columns>pse__Thursday_Hours__c</columns>
        <columns>pse__Friday_Hours__c</columns>
        <columns>pse__Saturday_Hours__c</columns>
        <columns>pse__Week_Start_Day__c</columns>
        <columns>pse__Week_Total_Hours__c</columns>
        <columns>pse__Standard_Hours_Per_Day__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Check_Hours</fullName>
        <active>true</active>
        <errorConditionFormula>OR(pse__Sunday_Hours__c &lt; 0, pse__Sunday_Hours__c &gt; 24, pse__Monday_Hours__c &lt; 0, pse__Monday_Hours__c &gt; 24, pse__Tuesday_Hours__c &lt; 0, pse__Tuesday_Hours__c &gt; 24, pse__Wednesday_Hours__c &lt; 0, pse__Wednesday_Hours__c &gt; 24, pse__Thursday_Hours__c &lt; 0, pse__Thursday_Hours__c &gt; 24, pse__Friday_Hours__c &lt; 0, pse__Friday_Hours__c &gt; 24, pse__Saturday_Hours__c &lt; 0, pse__Saturday_Hours__c &gt; 24)</errorConditionFormula>
        <errorMessage>Hours cannot be negative or greater than 24.</errorMessage>
    </validationRules>
</CustomObject>